[tool.poetry]
name = "paul"
version = "0.1.0"
description = "Manage all your favorite system tools like ripgrep with just one command"
authors = ["NTBBloodbath <bloodbathalchemist@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "paul", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
rich = "^13.3.1"
jsonschema = "^4.17.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.239"
black = "^23.1.0"
pytest = "^7.2.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
